# Project3_YZ

./: CMakeLists.txt  readme.md
draft/: classification.h  feature_extraction.cpp  morphological_filtering.cpp  save_feature.cpp  segmentation.cpp  segmentation.h
include/: display.h  feature_extraction.h  morphological_filtering.h  segment.h  thresholding.h
src/: classification.cpp  classify.cpp  clean_process.cpp  display.cpp  feature_extraction.cpp  feature_process.cpp  morphological_filtering.cpp  save_feature.cpp  segment.cpp  segment_process.cpp  threshold_process.cpp  thresholding.cpp
